--- a/public/frontend/estrogen/chitiethoidap.html
+++ b/public/frontend/estrogen/chitiethoidap.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" media="all">
 </head>
 <body>
 <div id="fb-root"></div>
@@ -52,30 +53,46 @@
         </div>
         <div class="fixCen head-info">
             <h1 class="rs"><a href="index.html" class="logo" title="Viêm gan" target="_blank">
-                <img src="images/logo.png" alt="Viêm gan" width="170" height="99" class="imgFull">
+                <img src="images/logo.png" alt="Viêm gan" class="imgFull">
             </a></h1>
             <span class="slogan">
-                    CỔNG THÔNG TIN VỀ BỆNH VIÊM GAN - XƠ GAN
-                    <i class="small">BẢO TRỢ BỞI HỘI GAN MẬT VIỆT NAM</i>
+                    Chuyên trang thông tin về nội tiết tố nữ estrogen
+                    <i class="small">BẢO TRỢ BỞI HỘI SẢN PHỤ KHOA VIỆT NAM</i>
                 </span>
-            <div class="icon-header">
+            <!-- <div class="icon-header">
                 <img src="images/icon.png" alt="" class="imgFull" width="67" height="71">
-            </div>
-            <span class="hotline" id="hotline">
+            </div> -->
+            <span class="hotline visible-sm visible-xs" id="hotline">
                     <a href="tel:19006639">
                         <img src="images/hotline.png" alt="" width="166" height="56" class="imgFull">
                     </a>
                     <form action="" class="search-on-top">
                         <input type="text" placeholder="Tìm kiếm">
                     </form>
-                </span>
+            </span>
+            <div class="hotline hidden-sm hidden-xs">
+                <div class="block-dk pull-right">
+                    <a href="#" title="Đăng bài viết"> <i class="fa fa-edit"></i> Đăng bài viết </a>
+                </div>
+
+                <div class="block-login pull-right">
+                    <a href="javascript:void(0)" class="btn-regis" title="Đăng ký">Đăng ký</a> | <a href="javascript:void(0)" class="btn-login" title="Đăng nhập">Đăng nhập </a> 
+                </div>
+                         
+                 <div class="block block-search">
+                    <form class="form-inline mt-2 mt-md-0">
+                        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                        <button type="submit"> <i class="fa fa-search"> </i></button>
+                    </form>
+                </div>
+            </div>
         </div>
         <nav id="main-nav" class="menu-mb">
             <ul class="fixCen pr rs">
                 <li><a href="index.html" title="Trang chủ">
                     Home
                 </a></li>
-                <li class="parentMenu"><a href="chuyenmuc.html" title="Các bệnh về gan" class="active">Các bệnh về gan</a>
+                <li class="parentMenu"><a href="chuyenmuc.html" title="Các bệnh về gan" class="active">nội tiết tố nữ</a>
                     <ul class="submenu">
                         <li><a href="chitietchuyenmuc.html" title="Tin tức">Viêm gan virus</a></li>
                         <li><a href="chitietchuyenmuc.html" title="Viêm gan virus">Ung thư gan</a></li>
@@ -86,18 +103,17 @@
                         <li><a href="chitietchuyenmuc.html" title="Men gan cao"></a></li>
                     </ul>
                 </li>
-                <li class="parentMenu"><a href="javascript:void(0)" title="Dược liệu với bệnh gan">Dược liệu với bệnh gan</a></li>
-                <li class="parentMenu"><a href="javascript:void(0)" title="Thông tin khoa học">Thông tin khoa học</a>
+                <li class="parentMenu"><a href="javascript:void(0)" title="Dược liệu với bệnh gan">Thông tin dược liệu</a>
                     <ul class="submenu">
-                        <li><a href="javascript:void(0)" title="Ý kiến chuyên gia">Ý kiến chuyên gia</a></li>
-                        <li><a href="javascript:void(0)" title="Cẩm nang bệnh gan">Cẩm nang bệnh gan</a></li>
+                        <li><a href="javascript:void(0)" title="Ý kiến chuyên gia">Thông tin chung</a></li>
                         <li><a href="javascript:void(0)" title="Nghiên cứu lâm sàng">Nghiên cứu lâm sàng</a></li>
                     </ul>
                 </li>
                 <li><a href="sanpham.html" title="Sản phẩm">Sản phẩm</a></li>
-                <li><a href="javascript:void(0)" title="Kinh nghiệm">Kinh nghiệm</a></li>
-                <li><a href="hoidap.html" title="Hỏi đáp">Hỏi đáp</a></li>
+                <li><a href="javascript:void(0)" title="Kinh nghiệm">Chia sẻ</a></li>
+                <li><a href="hoidap.html" title="Hỏi đáp">Góc nhìn chuyên gia</a></li>
                 <li><a href="tintuc.html" title="Tin tức">Tin tức</a></li>
+                <li><a href="hoidap.html" title="Video">Hỏi đáp</a></li>
                 <li><a href="video.html" title="Video">Video</a></li>
                 <li><a href="hethongphanphoi.html" title="Phân phối">Phân phối</a></li>
                 <li><a href="lienhe.html" title="Liên hệ">Liên hệ</a></li>
@@ -156,75 +172,76 @@
                             <a href="" title="">Thuốc tốt</a>
                             <a href="" title="">Thuốc hay</a>
                         </div>
-                        <div class="news-bt">
-                            <div class="box-usual-ques">
-                                <h3 class="global-title">
-                                    <a href="#"> TIN LIÊN QUAN</a>
-                                </h3>
-                                <div class="box-bd">
-                                    <div class="item cf item-r">
-                                        <h3>
-                                            <a href="#"> Sở thích vừa học, vừa hát Sở thích vừa học, vừa hát</a>
-                                        </h3>
-                                    </div>
-                                    <div class="item cf item-r">
-                                        <h3>
-                                            <a href="#"> Sở thích vừa học, vừa hát</a>
-                                        </h3>
-                                    </div>
-                                    <div class="item cf item-r">
-                                        <h3>
-                                            <a href="#"> Sở thích vừa học, vừa hát Sở thích vừa học, vừa hát</a>
-                                        </h3>
-                                    </div>
-                                    <div class="item cf item-r">
-                                        <h3>
-                                            <a href="#"> Sở thích vừa học, vừa hát</a>
-                                        </h3>
-                                    </div>
-                                    <div class="item cf item-r">
-                                        <h3>
-                                            <a href="#"> Sở thích vừa học, vừa hát Sở thích vừa học, vừa hát</a>
-                                        </h3>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="box-usual-ques">
-                                <h3 class="global-title">
-                                    <a href="#">TIN MỚI</a>
-                                </h3>
-                                <div class="box-bd">
-                                    <div class="item cf item-r">
-                                        <h3>
-                                            <a href="#"> Sở thích vừa học, vừa hát Sở thích vừa học, vừa hát</a>
-                                        </h3>
-                                    </div>
-                                    <div class="item cf item-r">
-                                        <h3>
-                                            <a href="#"> Sở thích vừa học, vừa hát</a>
-                                        </h3>
-                                    </div>
-                                    <div class="item cf item-r">
-                                        <h3>
-                                            <a href="#"> Sở thích vừa học, vừa hát Sở thích vừa học, vừa hát</a>
-                                        </h3>
-                                    </div>
-                                    <div class="item cf item-r">
-                                        <h3>
-                                            <a href="#"> Sở thích vừa học, vừa hát</a>
-                                        </h3>
-                                    </div>
-                                    <div class="item cf item-r">
-                                        <h3>
-                                            <a href="#"> Sở thích vừa học, vừa hát Sở thích vừa học, vừa hát</a>
-                                        </h3>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                         <div class="social-bt">
                             <img src="images/social.jpg" alt="" width="341" height="24" class="imgFull">
                         </div>
+                        <div class="news-bt">
+                            <div class="box-usual-ques">
+                                <div class="custom-global-title">
+                                    <a href="#"> TIN LIÊN QUAN</a>
+                                </div>
+                                <div class="box-bd">
+                                    <div class="item cf item-r">
+                                        <h3>
+                                            <a href="#"> Sở thích vừa học, vừa hát Sở thích vừa học, vừa hát</a>
+                                        </h3>
+                                    </div>
+                                    <div class="item cf item-r">
+                                        <h3>
+                                            <a href="#"> Sở thích vừa học, vừa hát</a>
+                                        </h3>
+                                    </div>
+                                    <div class="item cf item-r">
+                                        <h3>
+                                            <a href="#"> Sở thích vừa học, vừa hát Sở thích vừa học, vừa hát</a>
+                                        </h3>
+                                    </div>
+                                    <div class="item cf item-r">
+                                        <h3>
+                                            <a href="#"> Sở thích vừa học, vừa hát</a>
+                                        </h3>
+                                    </div>
+                                    <div class="item cf item-r">
+                                        <h3>
+                                            <a href="#"> Sở thích vừa học, vừa hát Sở thích vừa học, vừa hát</a>
+                                        </h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box-usual-ques">
+                               <div class="custom-global-title">
+                                    <a href="#">TIN MỚI</a>
+                                </div>
+                                <div class="box-bd">
+                                    <div class="item cf item-r">
+                                        <h3>
+                                            <a href="#"> Sở thích vừa học, vừa hát Sở thích vừa học, vừa hát</a>
+                                        </h3>
+                                    </div>
+                                    <div class="item cf item-r">
+                                        <h3>
+                                            <a href="#"> Sở thích vừa học, vừa hát</a>
+                                        </h3>
+                                    </div>
+                                    <div class="item cf item-r">
+                                        <h3>
+                                            <a href="#"> Sở thích vừa học, vừa hát Sở thích vừa học, vừa hát</a>
+                                        </h3>
+                                    </div>
+                                    <div class="item cf item-r">
+                                        <h3>
+                                            <a href="#"> Sở thích vừa học, vừa hát</a>
+                                        </h3>
+                                    </div>
+                                    <div class="item cf item-r">
+                                        <h3>
+                                            <a href="#"> Sở thích vừa học, vừa hát Sở thích vừa học, vừa hát</a>
+                                        </h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
                         <div class="comment-post">
                             <div class="fb-comments" data-href="https://www.facebook.com/tuelinh.vn" data-numposts="2" data-width="100%"></div>
                         </div>
@@ -456,55 +473,38 @@
             </div>
         </div>
     </section>
+    <!-- Start footer -->
     <footer>
         <div class="fixCen">
-            <div class="copyright">
-                CỔNG THÔNG TIN VỀ BỆNH VIÊM GAN, XƠ GAN BẢO TRỢ BỚI HỘI GAN MẬT VIỆT NAM
+            <div class="listSocial">
+                <div> <a href="#"> <i class="fa fa-facebook"> </i></a> </div>
+                <div> <a href="#"> <i class="fa fa-google-plus"> </i></a></div>
+                <div> <a href="#"> <i class="fa fa-youtube"> </i></a> </div>
+                <div> <a href="#"> <i class="fa fa-phone"> </i></a> </div>
+                <div> <a href="#"> <i class="fa fa-phone"> </i></a> </div>
             </div>
         </div>
     </footer>
     <div class="others">
         <div class="fixCen">
-            <div class="content">
-                <div class="links">
-                    <a href="javascript:void(0)" title="Thông tin sản phẩm">Thông tin sản phẩm</a>
-                    <a href="sanpham.html" title="Nghiên cứu khoa học">Nghiên cứu khoa học</a>
-                    <a href="dlcaythuoc.html" title="Trải nghiệm khách hàng">Trải nghiệm khách hàng</a>
-                    <a href="hethongphanphoi.html" class="diem-ban-btn" title="Điểm bán sản phẩm">ĐIỂM BÁN</a>
-                </div>
-            </div>
-            <div class="content">
-                <div class="links">
-                    <a href="sanpham.html" title="Các bệnh về gan">Các bệnh về gan</a>
-                    <a href="sanpham.html" title="Xơ gan">Xơ gan</a>
-                    <a href="sanpham.html" title="Viêm gan virus">Viêm gan virus</a>
-                    <a href="sanpham.html" title="Ung thư gan">Ung thu gan</a>
-                    <a href="sanpham.html" title="Bệnh gan khác">Bệnh gan khác</a>
-                </div>
-            </div>
-            <div class="content">
-                <div class="btn-groups">
-                    <a href="hethongphanphoi.html" class="diem-ban-btn">
-                        <img src="images/tu-van-1.png" alt="" class="imgFull" width="230" height="50">
-                    </a>
-                    <a href="tel:0912571190" class="tu-van-btn" title="Tư vấn miễn phí">
-                        <img src="images/diem-ban-1.png" alt="" class="imgFull" width="230" height="50">
-                    </a>
-                </div>
-                <div class="text">
-                    <span>
-                        <i>
-                            CỔNG THÔNG TIN VỀ BỆNH GAN - XƠ GAN
-                        </i>
-                    <brown>BẢO TRỢ BỚI HỘI GAN MẬT VIỆT NAM</brown>
-                    </span>
-                    <i class="icon">
-                        <img src="images/icon.png" alt="" class="imgFull" width="67" height="71">
-                    </i>
-                </div>
+            <div class="content-footer">
+            <p><span style="color:#f9ed32">Estrogen.vn</span> là diễn ddatnf chia sẻ, trao đổi và tương tác chia sẻ kinh nghiệm về nội tiêt tố nữ estrogen</p>
+            <p>Cơ quan chủ quản: Công ty TNHH Truyền thông Sức  khỏe là Vàng</p>
+            <p>Trụ sở chính: Thôn 3, xã Phù Lưu Tế, Huyện Mỹ Đức, thành phố Hà Nội.</p>
+            <ul>
+                <li>* Các thông tin trên website dùng để tham khảo, khi áp dụng nên hỏi ý kiến Bác sĩ chuyên khoa.</li>
+                <li>* Chúng tôi không chịu bất cứ trách nhiệm nào do việc tujwj ý áp dụng các thông tin trên website gây ra.</li>
+                <li>* Email: phongbenhgan.fb@gmail.com</li>
+                <li>* <a href="tel: 18001190">Số điện thoại: 0243991436</a></li>
+                <li>* Chịu trách nhiệm nội dung: Bà Đàm Thị Xuyến</li>
+                <li>* GP MXH: 253/GP-BTTTT do Bộ TTTH cấp ngày 28/06/2018</li>
+                <li>* Website đang trong quá trình thử nghiệm và hoàn thiện hệ thống kỹ thuật</li>
+                <li>* <a href="dieukhoan.html">Điều khoản sử dụng</a></li>
+            </ul>
             </div>
         </div>
     </div>
+    <!-- End footer -->
 </div>
 </body>
 <script src="js/jquery-1.11.1.min.js" type="text/javascript"></script>
